--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,10 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Added by ScratchAddons
+# English source file
+addons-source.json
+
+# Cloned repo
+clone
