--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "repository": "github:ScratchAddons/ScratchAddons",
     "private": true,
     "devDependencies": {
+        "@octokit/auth-action": "^1.3.0",
+        "@octokit/rest": "^18.0.9",
         "async": "^3.2.0",
         "chalk": "^4.1.0",
         "mkdirp": "^1.0.4",
