--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "devDependencies": {
         "@octokit/auth-action": "^1.3.3",
         "@octokit/rest": "^18.12.0",
-        "async": "^3.2.1",
-        "chalk": "^4.1.2",
+        "async": "^3.2.2",
+        "chalk": "^5.0.0",
+        "chalk-template": "^0.2.0",
         "mkdirp": "^1.0.4",
         "transifex": "^1.6.6"
     },
